tests/ui-pre_1.39/subcommand_and_methods.stderr
error: methods in attributes are not allowed for subcommand
  --> $DIR/subcommand_and_methods.rs:17:29
   |
17 |     #[structopt(subcommand, long)]
   |                             ^^^^
